--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div class="heading">Pirate Speak</div>
     </nav>
     <main>
-      <textarea placeholder="Type your input here"></textarea>
-      <button>Translate to pirate language</button>
+      <textarea placeholder="Type your input here" class="input"></textarea>
+      <button class="btn">Translate to pirate language</button>
       <p>
         Translation will come here
         <img src="arrow.svg" alt="" />
